<resources>
    <string name="app_name">AuthWidgets</string>

    <string name="usage_info">
        \t\t感谢您使用 SakuraFrp AuthPanel GuestWidgets,
        此工具被设计用于简化您的访问认证流程。\n\n
        \t\t本 App 直接打开无功能, 请在主屏幕或负一屏长按添加微件使用。
    </string>
    <string name="req_perm">
        请您打开通知权限, 本应用不会推送通知, 但需要此权限发送 Toast 消息以正常工作。\n\n
        请您打开通知权限, 本应用不会推送通知, 但需要此权限发送 Toast 消息以正常工作。\n\n
        请您打开通知权限, 本应用不会推送通知, 但需要此权限发送 Toast 消息以正常工作。\n\n
    </string>
    <string name="configure">配置名称</string>
    <string name="widget_name">AuthWidget</string>
    <string name="widget_addr">隧道 IP 地址, 如 1.2.3.4</string>
    <string name="widget_port">隧道端口, 如 12345</string>
    <string name="widget_pass">隧道访问密码</string>
    <string name="widget_call">认证通过后打开的 Url, 可留空</string>
    <string name="widget_totp">一次性密码信息, 可留空</string>
    <string name="widget_persist">记住认证, 开启后不受超时影响</string>
    <string name="widget_alwayscb">连接错误也打开后续链接(如重复认证时)</string>
    <string name="add_widget">添加微件</string>
    <string name="app_widget_description">此微件用于快速执行 SakuraFrp 访问认证</string>
    <string name="btn_scan">扫码载入配置</string>
    <string name="end_icon_app_select">选择启动 APP</string>
    <string name="package_loading">加载中，请稍后。\n\n如果您的应用较多，打开时间可能会很长，此时需要打开应用的话您可以使用 open-app://包名 链接替代。</string>
    <string name="no_package_warn">我们未能为您加载 APP 列表，\n发生此问题的原因通常是您拒绝了应用列表权限的弹窗。\n\n
    特别的，如果您使用三星手机，您可能从未见过应用列表权限弹窗，这是因为 OneUI 的一个 Bug。\n\n
    要使用 APP 选择器，请为此应用打开应用列表权限。</string>
</resources>